--- a/index.html
+++ b/index.html
@@ -1,1 +1,156 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+  <style>
+    @import url("https://fonts.googleapis.com/css?family=Lato|Raleway|Roboto&display=swap");
+  </style>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <title>Darwiche</title>
+</head>
+
+<body>
+  <!-- -----------------------Logo -->
+  <div class="logo-space">
+    <img src="./assets/images/logo_main.jpg" alt="logocopy" class="center" />
+  </div>
+  <!------------------------Tagline -->
+
+  <h3 class="tagline-1">DarwichE</h3>
+  <!------------------------------------------------------- Navbar dark -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shows</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Videos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Music</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Shop</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Press</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+      </ul>
+      <span class="navbar-text">
+        DarwichE
+      </span>
+    </div>
+  </nav>
+  <!---------------------------------------------------------front-body -->
+  <div class="parallax"></div>
+
+
+  <div class="container container-middle">
+    <h3>Darwiche Rock Band</h3>
+    <p class="lead">Placeholder text here
+      <p><strong>More placeholder text here</strong></p>
+  </div>
+
+  <div class="container-fluid parallax2"></div>
+
+  <!-- -------------------------------------------Footer -->
+
+  <footer class="container-fluid">
+    <!-- --------------------Legal KUUA -->
+    <div id="footer-details" class="row">
+      <div class="col-sm-4">
+        <h5 class="footer_titles">Sign up to get news about the band</h5>
+        <form>
+          <div class="form-group">
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+              placeholder="Enter email" />
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+        </form>
+        <button type="button" class="btn btn-secondary btn-sm">Subscribe!</button>
+      </div><br>
+      <!-- --------------------Where to find us -->
+      <div class="col-lg-4">
+        <h5 class="footer_titles">Where to find us</h5>
+        <ul class="fa-ul">
+          <li>
+            <span class="fa-li"><i class="fas fa-home"></i></span>Placeholder text
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-phone"></i></span>Placeholder text
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-at"></i></span>Placeholder text
+          </li>
+          <li>
+            <span class="fa-li"><i class="fas fa-map-marker-alt"></i></span>Placeholder text
+          </li>
+        </ul>
+      </div>
+      <!-- Social Media -->
+      <div class="col-sm-4">
+        <h5 class="footer_titles">Follow us</h5>
+        <ul class="list-inline social-links">
+          <li class="list-inline-item">
+            <a target="_blank" href="https://www.instagram.com/">
+              <i class="fab fa-instagram" aria-hidden="true"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a target="_blank" href="https://www.facebook.com/">
+              <i class="fab fa-facebook-f" aria-hidden="true"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="https://www.twitter.com/">
+              <i class="fab fa-twitter" aria-hidden="true"></i>
+              <span class="sr-only">Twitter</span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a target="_blank" href="https://www.pinterest.com/">
+              <i class="fab fa-pinterest" aria-hidden="true"></i>
+              <span class="sr-only">Pinterest</span>
+            </a>
+          </li>
+
+          <li class="list-inline-item">
+            <a target="_blank" href="https://www.linkedin.com/">
+              <i class="fab fa-linkedin" aria-hidden="true"></i>
+              <span class="sr-only">Linkedin</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <row class="col-sm-12">
+      <p>© All rights reserved - DARWICHE - 2020</p>
+    </row>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</body>
+
+</html>
