--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 </head>
 
 <body>
-  <!-- -----------------------Logo -->
+  <!--Logo -->
   <div class="logo-space">
     <img src="./assets/images/logo_main.jpg" alt="logocopy" class="center" />
   </div>
   <!------------------------Tagline -->
 
-  <h3 class="tagline-1">DarwichE</h3>
-  <!------------------------------------------------------- Navbar dark -->
+  <h3 class="tagline-1">DARWICHE</h3>
+  <!--Navbar dark -->
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,8 +59,10 @@
       </span>
     </div>
   </nav>
-  <!---------------------------------------------------------front-body -->
+  
+  <!--front-body -->
   <div class="parallax"></div>
+
 
 
   <div class="container container-middle">
